<resources>
    <string name="app_name">LaundryKuy</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Belum punya akun. Register sekarang !</string>
    <string name="btn_link_to_login">Sudah punya akun. login sekarang !</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Lupa password ?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Lupa password?</string>
    <string name="forgot_password_msg">Kamu hanya perlu memasukan email lalu kami akan mengirim pesan konfirmasi password baru melalui email yang kamu masukan.</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="prompt_password">prompt_password</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="title_activity_main">activity_main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="layanan_laundry">Layanan Laundry</string>
    <string name="cek_berat_cucian">Cek Berat Cucian</string>
    <string name="mitra_laundry">Tentang Laundry Kuy</string>
    <string name="title_activity_menu_layanan">menu_layanan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="jenis_laundry">Jenis Laundry</string>
    <string name="title_activity_navigation_bottom">NavigationBottom</string>
    <string name="estimasi_berat_pakaian">Estimasi Berat Pakaian</string>
    <string name="tx_about">Laundry Kuy merupakan aplikasi penyedia jasa laundry yang bisa digunakan bagi mereka yang ingin melaundry pakaian secara praktis
    laundry  kuy menyediakan beberapa fitur unggulannya diantarannya yaitu fitur antar - jemput pakaian customer yang akan atau yang sudah menggunakan jasa laundry dari laundry kuy.
    tarif untuk pakaian yang dilandry yaitu Rp.6.000,- perkilogram untuk mengetahui tarif dan estimasi dari berat pakaian tersedia fitur untuk menghitung estimasi berat pakaian dan tarif
    yang harus dibayar fitur ini diharapkan bisa membantu customer dalam mengetahui estimasi berat dari pakaiannya serta berapa tarif yang harus dibayar.</string>


    <string-array name="labels_array">
        <item>Paket Reguler (3-4 hari)</item>
        <item>Paket Cuci Kilat (1-2 hari)</item>
    </string-array>

</resources>
